# ros-static-graph-analysis

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  devel_environment.sh
example/: CMakeLists.txt  FindClassDecls.cpp  FindClassDeclsPlugin.cpp  PrintFunctionNames.cpp  README.md  foo.cc
include/: FindROSPrimitivesPlugin.h  ROSPrimitiveMatcher.h  Types.h
src/: FindROSPrimitivesPlugin.cpp  ROSPrimitiveMatcher.cpp
test/: .gitignore  README.md
